css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* PAGE BACKGROUND */

body {
	background: linear-gradient(-45deg, #5552ee, #e73c7e, #23a6d5, #23d5ab);
	background-size: 400% 400%;
	animation: gradientbg 20s linear infinite;
    font-family: 'Poppins', sans-serif;
    font-weight: 400;
    overflow-x: hidden;
}

.floatingformulas {
    position:absolute;
    top:0px;
    right:0px;
    bottom:0px;
    left:0px;
    z-index: -1;
}

.floatingformulas cite {
    color: white;
    position: absolute;
    font-size: 1.5rem;
    opacity: .6;
    cursor: pointer;
}

a.formula:link
{
    text-decoration: none;
}

/* GRADIENT SETTING */

@keyframes gradientbg {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.header {
    border-radius: 20px;
    background-color: #20202060;
    width: 50rem;
    margin: auto;
    padding-left: 10px;
    padding-right: 10px;
    margin-top: 10px;
}

.firsttitlehalf {
    text-shadow: 0 0 5px #202020;
}

.secondtitlehalf {
    color: gold;
    text-shadow: 0 0 10px gold;
}

.title {
    text-align: center;
    font-size: 6rem;
    padding: 0;
    margin: 0;
    font-family: 'Poppins', sans-serif;
    letter-spacing: 3px;
}

.subtitle {
    text-align: center;
    font-size: 2rem;
    padding: 0;
    margin: 0;
    padding-bottom: 20px;
    font-family: 'Poppins', sans-serif;	
    font-weight: 600;
	background: linear-gradient(to right, #0099ff , #00ff00, #6666ff);
    -webkit-background-clip: text;
    background-clip: text;
    color: transparent;
    animation: subtitleanim 6s ease-in-out infinite;
    background-size: 400% 100%;
}

@keyframes subtitleanim {
    0%,100% {
        background-position: 0 0;
    }

    50% {
        background-position: 100% 0;
    }
}

.selecttip {
    font-size: 2rem;
}

.spacer {
    margin-top: 100px;
}

.main {
    text-align: center;
}

/* Buttons Properties */

.buttons button
{
    font-size: 2rem;
	border-radius: 6px;
    border: none;
    margin: 15px;
    padding: 15px;
	opacity: 0.9;
	transition: .8s;
    font-weight: 600;
    outline: none;
}

/* Color Buttons */

#arithmetics 
{
    background-color: #0489fb;
}

#arithmetics:hover 
{
	opacity: 1;
    box-shadow: 0 0 15px #0489fb;
    transform: scale(1.1);
}

#algebra 
{
	background-color: #00ff10;
}

#algebra:hover
{
    opacity: 1;
    box-shadow: 0 0 15px #00ff10;
    transform: scale(1.1);
}

#trigonometry {
 background-color: #e0ff00;
}

#trigonometry:hover
{
    opacity: 1;
    box-shadow: 0 0 15px #e0ff00;
    transform: scale(1.1);
}

#calculus 
{
 background-color: #ff0000;
}

#calculus:hover 
{
    opacity: 1;
    box-shadow: 0 0 15px #ff0000;
    transform: scale(1.1);
}

.footer
{
	position: fixed;
	left: 0;
	bottom: 0;
	width: 100%;
	background-color: #202020;
	color: white;
	text-align: center;
}

/* Footer Heart */
.heart {
    display: inline-block;
    animation: heartbeat 2s linear infinite;
}

/* Animation for Footer Heart */
@keyframes heartbeat {
0% {transform: scale(1);}
50% {transform: scale(1.2);}
100% {transform: scale(1);}
}

/* Selection Animation */

@keyframes centerarithmetics
{
    0% {transform: translateX(0rem);}
    100%{transform: translateX(17vw);}
}

@keyframes centeralgebra
{
    0% {transform: translateX(0rem);}
    100%{transform: translateX(5.5vw);}
}

@keyframes centertrigonometry
{
    0% {transform: translateX(0rem);}
    100%{transform: translateX(-6vw);}
}

@keyframes centercalculus
{
    0% {transform: translateX(0rem);}
    100%{transform: translateX(-18vw);}
}

@keyframes slideawayright
{
    0% {transform:translateX(0rem);}
    100% {transform:translateX(50rem); opacity: 0;}
}

@keyframes slideawayleft
{
    0% {transform:translateX(0rem);}
    100% {transform:translateX(-50rem); opacity: 0;}
}

@keyframes playpanelslideup
{
    0% {transform: translateY(50vh); opacity: 0.4;}
    70% {transform: translateY(2vh); opacity: 0.6}
    80% {transform: translateY(0vh); opacity: 0.8;}
    100% {transform: translateY(2vh); opacity: 1;}
}

/* Links Setting */
a:active {
    color: white;
}
a:visited {
    color: white;
}
a:link {
    color: white;
}
a:invalid {
    color: white;
}
a:hover {
    color: #0099ff;
    text-shadow: 0 0 5px #0099ff;
}

.play {
	background-color: #202020;
	width: 400px;
	height: 230px;
	margin: auto;
	border-radius: 1.5em;
	box-shadow: 0px 11px 35px 2px rgba(0, 0, 0, 0.14);
    display: none; 
}


.sign {
	padding-top: 20px;
	color: #8C55AA;
	font-family: 'Ubuntu', sans-serif;
	font-weight: bold;
	font-size: 23px;
	margin: auto;
}

.un {
    width: 90%;
    color: rgb(255, 255, 255);
    font-weight: 700;
    font-size: 14px;
    letter-spacing: 1px;
    background: rgba(136, 126, 126, 0.04);
    padding: 10px 20px;
    border: none;
    border-radius: 20px;
    outline: none;
    box-sizing: border-box;
    border: 2px solid rgba(0, 0, 0, 0.02);
    margin-left: auto;
    text-align: center;
    margin-bottom: 50px;
    }

form.form1 {
	padding-top: 30px;
}

.submit {
	  cursor: pointer;
	  border-radius: 4em;
	  color: #fff;
	  background: linear-gradient(to right, #9C27B0, #E040FB);
	  border: 0;
	  padding-left: 50px;
	  padding-right: 50px;
	  padding-bottom: 10px;
	  padding-top: 10px;
	  margin-left: auto;
      margin-right: auto;
	  font-size: 15px;
      font-weight: 600;
	  box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.04);
  }


#username {
    /*display: none;*/
    border-radius: 5px;
    padding: 10px;
    border: 1px solid black;
    background-color: transparent;
}

